--- a/Website/_layouts/default.html
+++ b/Website/_layouts/default.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
 </head>
 <body>
-    {{ content }}
+    <header>
+        <h1>{{ site.title }}</h1>
+    </header>
+    <main>
+        {{ content }}
+    </main>
+    <footer>
+        <p>&copy; 2024 {{ site.title }}</p>
+    </footer>
 </body>
 </html>
